data/derived/comb/progs/unify/prog5712.ml.out
Characters 21-24:
  let _ = listReverse ["a"; "b"; "c"; "d"];;
                       ^^^
Error: This expression has type string but an expression was expected of type
         int
